syntax = "proto2";
package PB_MSG;

import "define_pro.proto";
import "define_attrib.proto";


message MsgSvrLogin
{
    optional uint64         UID                     = 1;
    optional string         GameType                = 2;
    optional uint32         ConFES                  = 3;
  
  
}

message MsgGameType
{
    optional string         Type                    = 1;
    optional uint32         Max                     = 2;
    optional uint32         Curr                    = 3;    
    
}

message MsgServiceInfo
{
    repeated MsgGameType    GameTypeList            = 1;
    optional uint32         MaxPlayer               = 2;
    optional uint32         CurrPlayer              = 3;
    optional uint32         ServiceID               = 4;
    optional string         ServiceName             = 5;

}
